Fixing piercing shot, handling crits

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -482,7 +482,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_health" value="!barbs_stat Health"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_health" value="!barbs stat Health"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Health</div>
@@ -494,7 +494,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_stamina" value="!barbs_stat Stamina"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_stamina" value="!barbs stat Stamina"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Stamina</div>
@@ -506,7 +506,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_mana" value="!barbs_stat Mana"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_mana" value="!barbs stat Mana"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Mana</div>
@@ -518,7 +518,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_health_regeneration" value="!barbs_stat Health_Regeneration"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_health_regeneration" value="!barbs stat Health_Regeneration"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Health Regeneration</div>
@@ -530,7 +530,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_stamina_regeneration" value="!barbs_stat Stamina_Regeneration"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_stamina_regeneration" value="!barbs stat Stamina_Regeneration"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Stamina Regeneration</div>
@@ -542,7 +542,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_mana_regeneration" value="!barbs_stat Mana_Regeneration"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_mana_regeneration" value="!barbs stat Mana_Regeneration"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Mana Regeneration</div>
@@ -554,7 +554,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_movement_speed" value="!barbs_stat Movement_Speed"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_movement_speed" value="!barbs stat Movement_Speed"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Movement Speed</div>
@@ -566,7 +566,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs_stat AC"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs stat AC"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">AC</div>
@@ -578,7 +578,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_evasion" value="!barbs_stat Evasion"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_evasion" value="!barbs stat Evasion"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Evasion</div>
@@ -590,7 +590,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs_stat Magic_Resist"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs stat Magic_Resist"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Magic Resist</div>
@@ -612,7 +612,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_condition_resist" value="!barbs_stat Condition_Resist"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_condition_resist" value="!barbs stat Condition_Resist"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Condition Resist</div>
@@ -624,7 +624,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_melee_damage" value="!barbs_stat Melee_Damage"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_melee_damage" value="!barbs stat Melee_Damage"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Melee Damage</div>
@@ -636,7 +636,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_ranged_fine_damage" value="!barbs_stat Ranged_Fine_Damage"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_ranged_fine_damage" value="!barbs stat Ranged_Fine_Damage"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Ranged/Fine Damage</div>
@@ -648,7 +648,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_magic_damage" value="!barbs_stat Magic_Damage"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_magic_damage" value="!barbs stat Magic_Damage"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Magic Damage</div>
@@ -660,7 +660,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_critical_hit_chance" value="!barbs_stat Critical_Hit_Chance"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_critical_hit_chance" value="!barbs stat Critical_Hit_Chance"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Critical Hit Chance</div>
@@ -672,7 +672,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_commands" value="!barbs_stat Commands"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_commands" value="!barbs stat Commands"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Commands</div>
@@ -684,7 +684,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_languages" value="!barbs_stat Languages"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_languages" value="!barbs stat Languages"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Languages</div>
@@ -696,7 +696,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_item_efficiency" value="!barbs_stat Item_Efficiency"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_item_efficiency" value="!barbs stat Item_Efficiency"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Item Efficiency</div>
@@ -708,7 +708,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_buff_limit" value="!barbs_stat Buff_Limit"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_buff_limit" value="!barbs stat Buff_Limit"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Buff Limit</div>
@@ -720,7 +720,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_concentration_limit" value="!barbs_stat Concentration_Limit"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_concentration_limit" value="!barbs stat Concentration_Limit"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Concentration Limit</div>
@@ -750,7 +750,7 @@
                 <fieldset class="repeating_skills">
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_skill" value="!barbs_skill @{skill_name} @{skill_points}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_skill" value="!barbs skill @{skill_name} @{skill_points}"></button>
                         </div>
                         <div class="sheet-col-13-24">
                             <input type="text" name="attr_skill_name"/>
@@ -1898,7 +1898,7 @@
     <!-- Skills rank and bonus updater -->
     <script type="text/worker">
 
-		const skill_to_attribute_map = {"Armor Mastery Cloth": "RES", "Armor Mastery Heavy": "TGH", "Armor Mastery Light": "REF", "Armor Mastery Shields": "TGH", "Artistry Acting": "APL", "Artistry Dancing": "APL", "Artistry Illustration": "APL", "Artistry Literature": "APL", "Artistry Music": "APL", "Artistry Sculpture": "APL", "Athletics Balance": "DEX", "Athletics Climbing": "AGI", "Athletics Force": "STR", "Athletics Movement": "AGI", "Athletics Pain Tolerance": "COM", "Beast Mastery Riding": "AGI", "Beast Mastery Taming": "WIS", "Combat Blocking": "TGH", "Combat Dodging": "REF", "Combat Grappling": "AGI", "Crafting Armorsmithing": "TGH", "Crafting Artificing": "RES", "Crafting Cooking": "APL", "Crafting Enchanting": "RES", "Crafting Fine Weapons": "REF", "Crafting Forgery": "PRE", "Crafting Leatherworking": "REF", "Crafting Jewelry": "FRT", "Crafting Heavy Weapons": "TGH", "Crafting Poisons": "FRT", "Crafting Potions": "FRT", "Crafting Ranged Weapons": "REF", "Crafting Shortblades": "PRE", "Crafting Tailoring": "RES", "Element Mastery Air": "AGI", "Element Mastery Dark": "FRT", "Element Mastery Earth": "RES", "Element Mastery Fire": "ATN", "Element Mastery Ice": "FRT", "Element Mastery Lightning": "ATN", "Gathering Forestry": "TGH", "Gathering Harvest": "AGI", "Gathering Herbology": "RES", "Gathering Hunting": "REF", "Gathering Mining": "TGH", "Gathering Skinning": "REF", "Item Use Appraisal": "WIS", "Item Use First Aid": "FRT", "Item Use Literacy": "INT", "Item Use Ropes": "WIS", "Interaction Deception": "APL", "Interaction Intent": "WIS", "Interaction Intimidation": "COM", "Interaction Leadership": "COM", "Interaction Persuasion": "APL", "Interaction Seduction": "APL", "Knowledge Arcana": "INT", "Knowledge Culture": "INT", "Knowledge History": "INT", "Knowledge Nature": "INT", "Magic Buffs": "FCS", "Magic Conjuration": "FCS", "Magic Control": "ATN", "Magic Defensive": "RES", "Magic Destruction": "ATN", "Magic Enchantment": "FCS", "Magic Mana Channeling": "COM", "Magic Restoration": "ATN", "Magic Summoning": "FCS", "Magic Transmutation": "FCS", "Magic Utility": "ATN", "Observation Listen": "WIS", "Observation Search": "WIS", "Stealth Disguise": "PRE", "Stealth Lockpicking": "PRE", "Stealth Sneak": "PRE", "Stealth Steal": "PRE", "Transportation Land Vehicles": "AGI", "Weapon Mastery Axes": "STR", "Weapon Mastery Bows": "DEX", "Weapon Mastery Bullets": "DEX", "Weapon Mastery Crossbows": "DEX", "Weapon Mastery Fine": "DEX", "Weapon Mastery Heavy Thrown Weapons": "STR", "Weapon Mastery Longblades": "STR", "Weapon Mastery Shields": "STR", "Weapon Mastery Shortblades": "PRE"};
+		const skill_to_attribute_map = {"Alchemy Augmentation": "INT", "Alchemy Constructs": "INT", "Alchemy Organics": "INT", "Alchemy Transformation": "INT", "Armor Mastery Cloth": "RES", "Armor Mastery Heavy": "TGH", "Armor Mastery Light": "REF", "Armor Mastery Shields": "TGH", "Artistry Acting": "APL", "Artistry Dancing": "APL", "Artistry Illustration": "APL", "Artistry Literature": "APL", "Artistry Music": "APL", "Artistry Sculpture": "APL", "Athletics Balance": "DEX", "Athletics Climbing": "AGI", "Athletics Flexibility": "DEX", "Athletics Force": "STR", "Athletics Movement": "AGI", "Athletics Pain Tolerance": "COM", "Beast Mastery Battle Pet": "WIS", "Beast Mastery Riding": "AGI", "Beast Mastery Taming": "WIS", "Combat Blocking": "TGH", "Combat Dodging": "REF", "Combat Grappling": "AGI", "Combat Trapping": "FRT", "Crafting Armorsmithing": "TGH", "Crafting Artificing": "RES", "Crafting Cooking": "APL", "Crafting Enchanting": "RES", "Crafting Fine Weapons": "REF", "Crafting Forgery": "PRE", "Crafting Leatherworking": "REF", "Crafting Jewelry": "FRT", "Crafting Heavy Weapons": "TGH", "Crafting Poisons": "FRT", "Crafting Potions": "FRT", "Crafting Ranged Weapons": "REF", "Crafting Shortblades": "PRE", "Crafting Tailoring": "RES", "Element Mastery Air": "AGI", "Element Mastery Dark": "FRT", "Element Mastery Earth": "RES", "Element Mastery Fire": "ATN", "Element Mastery Ice": "FRT", "Element Mastery Light": "FCS", "Element Mastery Lightning": "ATN", "Element Mastery Water": "FCS", "Gathering Forestry": "TGH", "Gathering Harvest": "AGI", "Gathering Herbology": "RES", "Gathering Hunting": "REF", "Gathering Mining": "TGH", "Gathering Skinning": "REF", "Item Use Appraisal": "WIS", "Item Use Construction": "STR", "Item Use First Aid": "FRT", "Item Use Literacy": "INT", "Item Use Ropes": "WIS", "Item Use Tinkering": "WIS", "Item Use Traps": "COM", "Interaction Deception": "APL", "Interaction Intent": "WIS", "Interaction Intimidation": "COM", "Interaction Leadership": "COM", "Interaction Persuasion": "APL", "Interaction Seduction": "APL", "Knowledge Arcana": "INT", "Knowledge Culture": "INT", "Knowledge History": "INT", "Knowledge Nature": "INT", "Knowledge Religion": "INT", "Magic Buffs": "FCS", "Magic Conditions": "ATN", "Magic Conjuration": "FCS", "Magic Control": "ATN", "Magic Defensive": "RES", "Magic Destruction": "ATN", "Magic Divination": "ATN", "Magic Enchantment": "FCS", "Magic Illusions": "FCS", "Magic Mana Channeling": "COM", "Magic Restoration": "ATN", "Magic Summoning": "FCS", "Magic Transmutation": "FCS", "Magic Utility": "ATN", "Observation Listen": "WIS", "Observation Search": "WIS", "Observation Tracking": "WIS", "Psionics Defensive": "COM", "Psionics Offensive": "COM", "Psionics Utility": "COM", "Stealth Disguise": "PRE", "Stealth Lockpicking": "PRE", "Stealth Sleight of Hand": "PRE", "Stealth Sneak": "PRE", "Stealth Steal": "PRE", "Transportation Air Vehicles": "COM", "Transportation Land Vehicles": "AGI", "Transportation Sea Vehicles": "FCS", "Weapon Mastery Axes": "STR", "Weapon Mastery Blunt": "STR", "Weapon Mastery Bows": "DEX", "Weapon Mastery Bullets": "DEX", "Weapon Mastery Crossbows": "DEX", "Weapon Mastery Fine": "DEX", "Weapon Mastery Improvised Weapons": "WIS", "Weapon Mastery Heavy Thrown Weapons": "STR", "Weapon Mastery Light Thrown Weapons": "DEX", "Weapon Mastery Longblades": "STR", "Weapon Mastery Polearms": "STR", "Weapon Mastery Shields": "STR", "Weapon Mastery Shortblades": "PRE", "Weapon Mastery Unarmed": "DEX"};
 
 		String.prototype.format = function() {
 			let a = this;
