--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -780,21 +780,30 @@
             <div class="sheet-row">
                 <div class="sheet-row sheet-sub-header">
                     <div class="sheet-col-1-12 sheet-center sheet-small-label">&nbsp;</div>
-                    <div class="sheet-col-19-24 sheet-center sheet-small-label">Ability</div>
+                    <div class="sheet-col-7-24 sheet-center sheet-small-label">Class</div>
+                    <div class="sheet-col-1-2 sheet-center sheet-small-label">Ability</div>
                     <div class="sheet-col-1-8 sheet-center sheet-small-label">Tier</div>
                 </div>
 
-                <!-- TODO fix points updating (ask API for the tier and fill in the field on changes -->
                 <fieldset class="repeating_abilities">
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_class_ability" value="!barbs_ability @{ability_name}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_class_ability" value="!barbs ability @{class_name},@{ability_name},@{ability_options}"></button>
                         </div>
-                        <div class="sheet-col-19-24">
+                        <div class="sheet-col-7-24">
+                            <input type="text" name="attr_class_name"/>
+                        </div>
+                        <div class="sheet-col-1-2">
                             <input type="text" name="attr_ability_name"/>
                         </div>
                         <div class="sheet-col-1-8">
-                            <input type="number" class="sheet-center" name="attr_ability_points" value="" min="1" max="4" disabled="disabled"/>
+                            <input type="number" class="sheet-center" name="attr_ability_tier" value="" min="1" max="4"/>
+                        </div>
+                    </div>
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-12">&nbsp;</div>
+                        <div class="sheet-col-11-12">
+                            <input type="text" name="attr_ability_options"/>
                         </div>
                     </div>
                 </fieldset>
@@ -2004,19 +2013,24 @@
 
 </div>
 
+
 <rolltemplate class="sheet-rolltemplate-5eDefault">
     <div class="sheet-rt-card">
         <div class="sheet-rt-header{{#weapon}} sheet-weapon{{/weapon}}{{#spell}}  sheet-spell{{/spell}}{{#ability}} sheet-ability{{/ability}}{{#save}} sheet-save{{/save}}{{#deathsave}} sheet-deathsave{{/deathsave}}">
             <div class="sheet-rt-title">{{title}}</div>
             {{#subheader}}
             <div class="sheet-rt-subheader">{{subheader}}{{#subheaderright}} &bullet; {{subheaderright}}{{/subheaderright}}</div>
-            {{/subheader}} {{#subheader2}}
+            {{/subheader}}
+
+            {{#subheader2}}
             <div class="sheet-rt-subheader">{{subheader2}}{{#subheaderright2}} &bullet; {{subheaderright2}}{{/subheaderright2}}</div>
             {{/subheader2}}
         </div>
+
         {{#emote}}
         <p class="sheet-rt-emote">{{character_name}} {{emote}}</p>
         {{/emote}}
+
         <div class="sheet-main-content">
             <!--Weapon based attacks-->
             {{#attack}}
@@ -2024,22 +2038,29 @@
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Attack</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{attack}}{{#attackadv}} | {{attackadv}}{{/attackadv}} vs AC</div>
             </div>
-            {{/attack}} {{#damage}}
+            {{/attack}}
+
+            {{#damage}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Damage</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{damage}}</div>
             </div>
-            {{/damage}} {{#rollWasCrit() attack}}
+            {{/damage}}
+
+            {{#rollWasCrit() attack}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{critdamage}}</div>
             </div>
-            {{/rollWasCrit() attack}} {{#rollWasCrit() attackadv}}
+            {{/rollWasCrit() attack}}
+
+            {{#rollWasCrit() attackadv}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit (adv roll)</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{critdamage}} (if attack was made with advantage)</div>
             </div>
             {{/rollWasCrit() attackadv}}
+
             <!--Spellcasting-->
             {{#spellshowinfoblock}}
             <div class="sheet-row sheet-padb">
@@ -2058,57 +2079,82 @@
                 <div class="sheet-col-1-2 sheet-padl sheet-padr sheet-center sheet-border-left-dotted"><span class="sheet-rt-key">Range</span>
                     <br/><span class="sheet-rt-value">{{spellrange}}</span></div>
             </div>
-            {{/spellshowinfoblock}} {{#spellshowattack}}
+            {{/spellshowinfoblock}}
+
+            {{#spellshowattack}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Attack</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{spellattack}}{{#spellshowattackadv}} | {{spellattackadv}}{{/spellshowattackadv}} vs AC</div>
             </div>
-            {{/spellshowattack}} {{#spellshowsavethrow}}
+            {{/spellshowattack}}
+
+            {{#spellshowsavethrow}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Save</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">DC {{spellsavedc}} {{spellsavestat}}</div>
             </div>
-            {{/spellshowsavethrow}} {{#spellshowhealing}}
+            {{/spellshowsavethrow}}
+
+            {{#spellshowhealing}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Healing</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{spellhealing}} HP healed</div>
             </div>
-            {{/spellshowhealing}} {{#spellshowdamage}}
+            {{/spellshowhealing}}
+
+            {{#spellshowdamage}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Damage</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{spelldamage}}</div>
             </div>
-            {{/spellshowdamage}} {{#spellcancrit}} {{#spellshowattack}} {{#rollWasCrit() spellattack}}
+            {{/spellshowdamage}}
+
+            {{#spellcancrit}}
+            {{#spellshowattack}}
+            {{#rollWasCrit() spellattack}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{spellcritdamage}}</div>
             </div>
-            {{/rollWasCrit() spellattack}} {{#rollWasCrit() spellattackadv}}
+            {{/rollWasCrit() spellattack}}
+
+            {{#rollWasCrit() spellattackadv}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit (adv roll)</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{spellcritdamage}} (if attack was made with advantage)</div>
             </div>
-            {{/rollWasCrit() spellattackadv}} {{/spellshowattack}} {{/spellcancrit}} {{#spellshoweffects}}
+            {{/rollWasCrit() spellattackadv}}
+            {{/spellshowattack}}
+            {{/spellcancrit}}
+
+            {{#spellshoweffects}}
             <div class="sheet-row">
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-key">Effect</div>
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-value">{{spelleffect}}</div>
             </div>
-            {{/spellshoweffects}} {{#spellshowsavethrow}}
+            {{/spellshoweffects}}
+
+            {{#spellshowsavethrow}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Save success</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{spellsavesuccess}}</div>
             </div>
-            {{/spellshowsavethrow}} {{#spellshowdesc}}
+            {{/spellshowsavethrow}}
+
+            {{#spellshowdesc}}
             <div class="sheet-row">
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-key">Spell Description</div>
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-value">{{spelldescription}}</div>
             </div>
-            {{/spellshowdesc}} {{#spellshowhigherlvl}}
+            {{/spellshowdesc}}
+
+            {{#spellshowhigherlvl}}
             <div class="sheet-row">
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-key">At Higher Levels</div>
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-value">{{spellhigherlevel}}</div>
             </div>
             {{/spellshowhigherlvl}}
+
             <!--NPC-->
             {{#npccorestats}}
             <div class="sheet-row">
@@ -2146,7 +2192,9 @@
                 <div class="sheet-col-1-3 sheet-padl sheet-padr sheet-rt-value">{{npc_charisma}}</div>
                 <div class="sheet-col-1-3 sheet-padl sheet-padr sheet-rt-value">{{npc_charisma_mod}}</div>
             </div>
-            {{/npccorestats}} {{#npctraits}}
+            {{/npccorestats}}
+
+            {{#npctraits}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Dmg Resistance</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{npc_damage_resistance}}</div>
@@ -2167,7 +2215,10 @@
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Other Traits</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{npc_traits}}</div>
             </div>
-            {{/npctraits}} {{#npcaction}} {{#npc_showmultiattack}}
+            {{/npctraits}}
+
+            {{#npcaction}}
+            {{#npc_showmultiattack}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Multi Attack</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{npc_multiattack}}</div>
@@ -2182,31 +2233,39 @@
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{npc_action_effect}}</div>
             </div>
             {{/npcaction}}
+
             <!--Generic section-->
             {{#freetext}}
             <div class="sheet-row">
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-key-wide">{{freetextname}}</div>
                 <div class="sheet-col-1 sheet-padl sheet-padr sheet-rt-value">{{freetext}}</div>
             </div>
-            {{/freetext}} {{#roll}}
+            {{/freetext}}
+
+            {{#roll}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">{{rollname}}</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{roll}}{{#rolladv}} | {{rolladv}}{{/rolladv}}</div>
             </div>
             {{/roll}}
+
             <!-- START roll option templates -->
             <!--Simple roll (such as save/skill check or weapon attack)-->
-            {{#simple}} {{#rollhasadv}}
+            {{#simple}}
+            {{#rollhasadv}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Roll type</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">With advantage</div>
             </div>
-            {{/rollhasadv}} {{#rollhasdisadv}}
+            {{/rollhasadv}}
+
+            {{#rollhasdisadv}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Roll type</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">With disadvantage</div>
             </div>
             {{/rollhasdisadv}}
+
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">{{rollname}}</div>
                 {{#noadvroll}}
@@ -2221,62 +2280,107 @@
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{roll1}} | <span class="sheet-ignored-roll">{{roll2}}</span></div>{{/rollLess() roll1 roll2}} {{#rollLess() roll2 roll1}}
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value"><span class="sheet-ignored-roll">{{roll1}}</span> | {{roll2}}</div>{{/rollLess() roll2 roll1}} {{/rollhasdisadv}}
             </div>
+
             {{#weapondamage}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Damage</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weapondamage}}</div>
             </div>
-            {{/weapondamage}} {{#weapon}} {{#noadvroll}} {{#rollWasCrit() roll1}}
+            {{/weapondamage}}
+
+            {{#weapon}}
+            {{#noadvroll}}
+            {{#rollWasCrit() roll1}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll1}} {{/noadvroll}} {{#showadvroll}} {{#rollWasCrit() roll1}}
+            {{/rollWasCrit() roll1}}
+            {{/noadvroll}}
+
+            {{#showadvroll}}
+            {{#rollWasCrit() roll1}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll1}} {{#rollWasCrit() roll2}}
+            {{/rollWasCrit() roll1}}
+
+            {{#rollWasCrit() roll2}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit (adv roll)</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll2}} {{/showadvroll}} {{#rollhasadv}} {{#rollGreater() roll1 roll2}} {{#rollWasCrit() roll1}}
+            {{/rollWasCrit() roll2}}
+            {{/showadvroll}}
+
+            {{#rollhasadv}}
+            {{#rollGreater() roll1 roll2}}
+            {{#rollWasCrit() roll1}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll1}} {{/rollGreater() roll1 roll2}} {{#rollGreater() roll2 roll1}} {{#rollWasCrit() roll2}}
+            {{/rollWasCrit() roll1}}
+            {{/rollGreater() roll1 roll2}}
+
+            {{#rollGreater() roll2 roll1}}
+            {{#rollWasCrit() roll2}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll2}} {{/rollGreater() roll2 roll1}} {{#rollTotal() roll1 roll2}} {{#rollWasCrit() roll1}}
+            {{/rollWasCrit() roll2}}
+            {{/rollGreater() roll2 roll1}}
+
+            {{#rollTotal() roll1 roll2}}
+            {{#rollWasCrit() roll1}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll1}} {{/rollTotal() roll1 roll2}} {{/rollhasadv}} {{#rollhasdisadv}} {{#rollLess() roll1 roll2}} {{#rollWasCrit() roll1}}
+            {{/rollWasCrit() roll1}}
+            {{/rollTotal() roll1 roll2}}
+            {{/rollhasadv}}
+
+            {{#rollhasdisadv}}
+            {{#rollLess() roll1 roll2}}
+            {{#rollWasCrit() roll1}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll1}} {{/rollLess() roll1 roll2}} {{#rollLess() roll2 roll1}} {{#rollWasCrit() roll2}}
+            {{/rollWasCrit() roll1}}
+            {{/rollLess() roll1 roll2}}
+
+            {{#rollLess() roll2 roll1}}
+            {{#rollWasCrit() roll2}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll2}} {{/rollLess() roll2 roll1}} {{#rollTotal() roll1 roll2}} {{#rollWasCrit() roll1}}
+            {{/rollWasCrit() roll2}}
+            {{/rollLess() roll2 roll1}}
+
+            {{#rollTotal() roll1 roll2}}
+            {{#rollWasCrit() roll1}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Crit</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{weaponcritdamage}}</div>
             </div>
-            {{/rollWasCrit() roll1}} {{/rollTotal() roll1 roll2}} {{/rollhasdisadv}} {{/weapon}} {{#math}}
+            {{/rollWasCrit() roll1}}
+            {{/rollTotal() roll1 roll2}}
+            {{/rollhasdisadv}}
+            {{/weapon}}
+
+            {{#math}}
             <div class="sheet-row">
                 <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Math</div>
                 <div class="sheet-col-7-12 sheet-padr sheet-rt-value sheet-no-roll-highlight">{{math}}</div>
             </div>
-            {{/math}} {{/simple}}
+            {{/math}}
+            {{/simple}}
+
             <!-- END roll option templates -->
             <!-- Class action additions -->
             {{#showclassactions}} {{#allprops() showclassactions character_name save title subheader subheaderright subheader2 subheaderright2 rollname roll rolladv emote deathsave weapon attack attackadv damage critdamage spell spellshowinfoblock spellshowdesc spelldescription spellshowhigherlvl spellhigherlevel spellshowattack spellattack spellshowattackadv spellattackadv spellshowsavethrow spellsavedc spellsavestat spellsavesuccess spellshowhealing spellhealing spellshowdamage spelldamage spellcancrit spellcritdamage spellshoweffects spelleffect spellcasttime spellduration spelltarget spellrange spellgainedfrom spellcomponents ability roll1 roll2 simple showadvroll noadvroll rollhasadv rollhasdisadv math weapondamage weaponcritdamage debug}}
