--- a/5e_character_sheet/DnD_5e.html
+++ b/5e_character_sheet/DnD_5e.html
@@ -1,3 +1,8 @@
+<!--
+  - This is stole from the Roll20 GitHub, credit goes there. I used it as a model and reference for the Barbs
+  - character sheet. Original can be found at: https://github.com/Roll20/roll20-character-sheets/tree/master/DnD_5e
+  -->
+
 <div class="sheet-overall-wrapper">
 	<!-- PC / NPC toggle -->
 	<input class="sheet-is-npc" type="checkbox" name="attr_is_npc" value="1"><span class="sheet-is-npc-tab"></span>
