Add warrior charge ability
Apply items effects only for corresponding attacks. I.e., damage and
effects from a bow should only apply to physical attacks, not magical
attacks.

Add "Charge!", though it doesn't have an end condition, so it'll
currently last forever. Also add the ability to specify arbitrary
additional multipliers and damages.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -788,7 +788,7 @@
                 <fieldset class="repeating_abilities">
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_class_ability" value="!barbs ability @{class_name},@{ability_name},@{ability_options}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_class_ability" value="!barbs ability @{class_name};@{ability_name};@{ability_options}"></button>
                         </div>
                         <div class="sheet-col-7-24">
                             <input type="text" name="attr_class_name"/>
